Drop functions which rely on PlasmaWindow::internalId()

While that returns a WinId, those are from the compositor and not related to
the internal WinIds from the calling application itself. Most uses of
KWindowSystem rely on that though, and so acted on a random other window
instead.

BUG: 436498